thanos/minikube/thanos-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-frontend-ingress
  namespace: monitoring-testing-october20
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: refactored-space-bassoon-6447q4747g5h56rq.github.dev
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: thanos-query-frontend
            port:
              number: 9095
